--- a/dockerFile
+++ b/dockerFile
@@ -1,3 +1,3 @@
 FROM openjdk:17-jdk-slim
-COPY build/demo-0.0.1-*.jar app.jar
+COPY build/libs/demo-0.0.1-*.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
